apps/web/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --gradient-angle: 360deg;

    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;

    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 45%;

    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;

    --card: 0 0% 100%;
    --card-hovered: 0 0% 98%;
    --card-foreground: 240 10% 3.9%;

    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;

    --primary: 330 81% 60%;
    --primary-foreground: 0 0% 98%;

    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;

    --accent: 240 4.8% 95.9%;
    --accent-foreground: ;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;

    --error-label: 0 84.2% 60.2%;

    --ring: 240 5% 64.9%;

    --radius: 0.5rem;

    --difficulty-beginner: 201 96% 32%;
    --difficulty-easy: 150 100% 25%;
    --difficulty-medium: 35 92% 33%;
    --difficulty-hard: 0 72% 51%;
    --difficulty-extreme: 262 83% 58%;

    --difficulty-beginner-dark: 199 69% 72%;
    --difficulty-easy-dark: 142 77% 73%;
    --difficulty-medium-dark: 31 86% 60%;
    --difficulty-hard-dark: 0 91% 71%;
    --difficulty-extreme-dark: 269 97% 85%;

    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
  }

  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;

    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;

    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;

    --card: 240 10% 3.9%;
    --card-hovered: 240 10% 6.9%;
    --card-foreground: 0 0% 98%;

    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;

    --primary: 330 81% 60%;
    --primary-foreground: 0 0% 98%;

    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;

    --accent: 240 3.7% 15.9%;
    --accent-foreground: ;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 85.7% 97.3%;

    --error-label: 0 92.2% 64.9%;

    --ring: 240 3.7% 15.9%;

    --difficulty-beginner: 199 69% 72%;
    --difficulty-easy: 142 77% 73%;
    --difficulty-medium: 31 86% 60%;
    --difficulty-hard: 0 91% 71%;
    --difficulty-extreme: 269 97% 85%;

    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

html,
body,
#__next,
main {
  scroll-padding-top: 64px;
  scroll-behavior: smooth;
  height: 100%;
}

.from-background {
  --tw-gradient-from: hsl(var(--background)) var(--tw-gradient-from-position);
}

.w-md-editor-content {
  @apply bg-background dark:bg-muted;
}

.w-md-editor-toolbar {
  @apply flex w-full gap-2;
  /* border-b border-b-zinc-300 */
  border-bottom: 1px solid rgb(212 212 216) !important;
  /* bg-background (in light mode) */
  background: #fff !important;
}

/* dark:border-b-zinc-300 dark:bg-muted */
.dark .w-md-editor-toolbar {
  border-bottom: 1px solid rgb(63 63 70) !important;
  background: hsl(240 3.7% 15.9%) !important;
}

.w-md-editor-toolbar-divider {
  @apply bg-zinc-300 dark:bg-zinc-700;
  /* TODO: not aligned center vertically */
  height: 1.5rem !important;
}
.w-md-editor-toolbar ul {
  @apply flex items-center;
}
.w-md-editor-toolbar ul li.active button {
  @apply text-black dark:text-white;
}
.w-md-editor-toolbar ul li button {
  @apply flex h-8 w-auto min-w-[2rem] items-center justify-center rounded-md p-1 text-neutral-500 hover:bg-neutral-200 hover:text-black dark:hover:bg-zinc-700 dark:hover:text-white;
}
.w-md-editor-toolbar ul li button[disabled] {
  @apply cursor-default text-neutral-700 hover:bg-transparent hover:text-neutral-700;
}
.w-md-editor-toolbar ul li button svg {
  @apply h-4 w-4;
}
.w-md-editor {
  background: var(--muted) !important;
}

.w-md-editor-preview {
  padding: 1rem !important;
  box-shadow: inset 1px 0 0 0 rgb(212 212 216) !important;
}
.dark .w-md-editor-preview {
  box-shadow: inset 1px 0 0 0 rgb(63 63 70) !important;
}

.w-md-editor-preview .wmde-markdown {
  @apply bg-muted;
}
.wmde-markdown ol {
  list-style: null !important;
}

.wmde-markdown ul {
  list-style: unset !important;
}
.custom-scrollable-element::-webkit-scrollbar {
  width: 0.6rem;
}
.custom-scrollable-element::-webkit-scrollbar-track {
  background-color: transparent;
}
.custom-scrollable-element::-webkit-scrollbar-thumb {
  @apply rounded-l-xl bg-neutral-300/50 dark:bg-zinc-700/50;
}

.custom-scrollable-element::-webkit-scrollbar-thumb:hover {
  @apply bg-neutral-300 dark:bg-zinc-600;
}

.moving-grid-background {
  will-change: transform;
  background-size: 3rem 3rem;
  background-image:
    linear-gradient(to right, #8882 1px, transparent 1px),
    linear-gradient(to bottom, #8882 1px, transparent 1px);
  animation: movingbackground 90s linear infinite !important;
}

.features-background-mask {
  mask-image: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%);
  -webkit-mask-image: linear-gradient(
    rgba(0, 0, 0, 0) 0%,
    rgba(0, 0, 0, 0) 50%,
    rgba(0, 0, 0, 1) 100%
  );
}

.animated-feature-cards::before {
  @apply pointer-events-none absolute select-none rounded-3xl opacity-0 transition-opacity duration-300 hover:opacity-100;
  background: radial-gradient(
    1000px circle at var(--x) var(--y),
    #3aecf8 0,
    #5295dc 25%,
    rgba(255, 255, 255, 0) 50%,
    transparent 80%
  );
  z-index: -1;
  content: '';
  inset: -1px;
}

#container {
  mask: linear-gradient(90deg, #0000, #000 10% 80%, #0000);
  -webkit-mask: linear-gradient(90deg, #0000, #000 10% 80%, #0000);
}
/* ... */

